--- a/app/src/main/res/layout/list_view_layout.xml
+++ b/app/src/main/res/layout/list_view_layout.xml
@@ -3,8 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/item_background"
-    android:padding="8dp"
-    android:onClick="onClick">
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/date_text"
