--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -37,6 +37,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="center"
+                android:layout_margin="2dp"
+                android:background="@drawable/simple_button"
                 android:text="학사일정"/>
 
             <Button
@@ -45,6 +47,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="center"
+                android:layout_margin="2dp"
+                android:background="@drawable/simple_button"
                 android:text="학교현황"/>
 
             <Button
@@ -53,6 +57,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="center"
+                android:layout_margin="2dp"
+                android:background="@drawable/simple_button"
                 android:text="길찾기"/>
 
         </LinearLayout>
