--- a/app/src/main/res/layout/notice_fragment.xml
+++ b/app/src/main/res/layout/notice_fragment.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/simple_button"
             android:text="이전"/>
 
         <TextView
@@ -33,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/simple_button"
             android:text="다음"/>
 
     </LinearLayout>
@@ -62,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:background="@drawable/simple_button"
         android:text="웹에서 보기"/>
 
 </RelativeLayout>
