--- a/app/src/main/res/drawable/item_background.xml
+++ b/app/src/main/res/drawable/item_background.xml
@@ -2,9 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"   >
 
-    <solid
-        android:color="#E0E0E0" >
-    </solid>
+
+    <stroke android:width="1dip" android:color="@color/colorPrimary" />
 
     <padding
         android:left="5dp"
