--- a/app/src/main/res/layout/allergy_layout.xml
+++ b/app/src/main/res/layout/allergy_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="200dp"
+    android:layout_width="match_parent"
     android:layout_height="300dp">
 
     <LinearLayout
@@ -10,146 +10,155 @@
         android:orientation="vertical">
 
         <TextView
-            android:padding="16dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:text="[ 알레르기 정보 ]"/>
-
-        <TextView
-            android:padding="2dp"
-            android:gravity="left"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_1"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_2"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_3"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_4"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_5"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_6"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_7"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_8"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_9"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_10"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_11"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_12"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_13"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_14"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_15"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_16"/>
+
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_17"/>
 
         <TextView
-            android:padding="2dp"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:padding="3dp"
+            android:layout_margin="3dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/textview_stroke"
             android:text="@string/al_18"/>
 
         <Button
             android:id="@+id/ok_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="16dp"
+            android:background="@drawable/simple_button"
             android:text="확인"/>
     </LinearLayout>
 
