--- a/app/src/main/res/layout/community_layout.xml
+++ b/app/src/main/res/layout/community_layout.xml
@@ -13,7 +13,7 @@
         android:src="@drawable/title"/>
 
     <LinearLayout
-        android:padding="16dp"
+        android:padding="8dp"
         android:layout_margin="24dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,49 +21,58 @@
         android:orientation="vertical">
 
         <Button
-            android:layout_margin="5dp"
+            android:layout_margin="3dp"
             android:id="@+id/school_page_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#ef5350"
+            android:background="#FF5252"
             android:text="학교 홈페이지"/>
 
         <Button
-            android:layout_margin="5dp"
+            android:layout_margin="3dp"
             android:id="@+id/doje_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#fff176"
+            android:background="#FFAB40"
             android:text="도제학교"/>
 
         <Button
-            android:layout_margin="5dp"
+            android:layout_margin="3dp"
             android:id="@+id/student_club_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#81c784"
+            android:background="#FFFF00"
             android:text="학생회 페이스북"/>
 
         <Button
-            android:layout_margin="5dp"
+            android:layout_margin="3dp"
             android:id="@+id/dev_info_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#42a5f5"
+            android:background="#00E676"
             android:text="개발자 정보"/>
 
         <Button
-            android:layout_margin="5dp"
+            android:layout_margin="3dp"
             android:id="@+id/share_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="#7e57c2"
+            android:background="#448AFF"
             android:text="공유하기"/>
+
+        <Button
+            android:layout_margin="3dp"
+            android:id="@+id/setting_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#7C4DFF"
+            android:text="설정"/>
 
     </LinearLayout>
 </LinearLayout>
