--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00bcd4</color>
-    <color name="colorPrimaryDark">#00acc1</color>
-    <color name="colorAccent">#006064</color>
+    <color name="colorPrimary">#546e7a</color>
+    <color name="colorPrimaryDark">#546e7a</color>
+    <color name="colorAccent">#455A64</color>
+    <color name="colorBackground">#FFFFFF</color>
 </resources>
