--- a/app/src/main/res/layout/notice_fragment.xml
+++ b/app/src/main/res/layout/notice_fragment.xml
@@ -4,49 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
-
-    <LinearLayout
-        android:padding="16dp"
-        android:id="@+id/top_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
-
-        <Button
-            android:id="@+id/prev_notice_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/simple_button"
-            android:text="이전"/>
-
-        <TextView
-            android:id="@+id/notice_page"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:textSize="30dp"
-            android:textAlignment="center" />
-
-        <Button
-            android:id="@+id/next_notice_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/simple_button"
-            android:text="다음"/>
-
-    </LinearLayout>
-
-
     <ListView
         android:id="@+id/notice_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:dividerHeight="5dp"
-        android:divider="#00000000"
-        android:layout_below="@id/top_btn">
+        android:divider="#00000000">
     </ListView>
 
     <ProgressBar
@@ -58,13 +21,63 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/notice_page_btn"
-        android:padding="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/notice_page_fab"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/simple_button"
-        android:text="웹에서 보기"/>
+        android:background="@drawable/circle_btn"
+        android:text="1"
+        android:textSize="20dp"
+        android:textColor="@color/colorPrimary"/>
+
+    <LinearLayout
+        android:id="@+id/notice_arc"
+        android:visibility="invisible"
+        android:layout_margin="10dp"
+        android:layout_alignBottom="@id/notice_listview"
+        android:layout_alignRight="@id/notice_listview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="52dp"
+            android:layout_height="52dp"/>
+
+        <Button
+            android:id="@+id/notice_browser_btn"
+            android:layout_marginRight="6dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_open_in_browser"
+            android:backgroundTint="@color/colorPrimary"/>
+
+        <Button
+            android:id="@+id/prev_notice_btn"
+            android:layout_marginRight="6dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/circle_btn"
+            android:textColor="@color/colorBackground"
+            android:text="&lt;"
+            android:textSize="25dp" />
+
+        <Button
+            android:id="@+id/next_notice_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="6dp"
+            android:background="@drawable/circle_btn"
+            android:textColor="@color/colorBackground"
+            android:text="&gt;"
+            android:textSize="25dp" />
+
+        <LinearLayout
+            android:layout_width="52dp"
+            android:layout_height="52dp"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
