--- a/app/src/main/res/layout/meal_fragment.xml
+++ b/app/src/main/res/layout/meal_fragment.xml
@@ -6,14 +6,12 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/meal_card_view"
         android:layout_marginTop="5dp"
-        android:id="@+id/meal_listview"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:dividerHeight="8dp"
-        android:divider="#00000000">
-    </ListView>
+        android:layout_height="match_parent"/>
 
     <Button
         android:id="@+id/fab_meal"
@@ -36,7 +34,7 @@
         android:visibility="invisible"
         app:arc_origin="bottom|right"
         app:arc_radius="168dp"
-        app:arc_axisRadius="120dp"
+        app:arc_axisRadius="150dp"
         app:arc_freeAngle="false"
         app:arc_reverseAngle="false">
 
