--- a/app/src/main/res/layout/notice_fragment.xml
+++ b/app/src/main/res/layout/notice_fragment.xml
@@ -36,20 +36,21 @@
         android:id="@+id/notice_arc"
         android:visibility="invisible"
         android:layout_margin="10dp"
-        android:layout_alignBottom="@id/notice_card_view"
-        android:layout_alignRight="@id/notice_card_view"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="52dp"
-            android:layout_height="52dp"/>
+            android:visibility="invisible"
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
 
         <Button
             android:id="@+id/notice_browser_btn"
             android:layout_marginRight="6dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="center"
             android:background="@drawable/ic_open_in_browser"
             android:backgroundTint="@color/colorPrimary"/>
@@ -57,26 +58,29 @@
         <Button
             android:id="@+id/prev_notice_btn"
             android:layout_marginRight="6dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
             android:background="@drawable/circle_btn"
             android:textColor="@color/colorBackground"
+            android:layout_gravity="center"
             android:text="&lt;"
             android:textSize="25dp" />
 
         <Button
             android:id="@+id/next_notice_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
             android:layout_marginRight="6dp"
             android:background="@drawable/circle_btn"
             android:textColor="@color/colorBackground"
+            android:layout_gravity="center"
             android:text="&gt;"
             android:textSize="25dp" />
 
         <LinearLayout
-            android:layout_width="52dp"
-            android:layout_height="52dp"/>
+            android:visibility="invisible"
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
 
     </LinearLayout>
 
