--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -31,14 +31,70 @@
                 android:layout_weight="1"/>
 
             <TextView
-                android:id="@+id/datasave_info_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:textSize="11dp"
                 android:textStyle="italic"
                 android:singleLine="true"
-                android:hint="앱 실행 시 데이터를 불러오지 않습니다"/>
+                android:hint="앱 실행 시 급식데이터를 불러오지 않습니다"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Switch
+                android:id="@+id/datasave1_switch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:textSize="11dp"
+                android:textStyle="italic"
+                android:singleLine="true"
+                android:hint="앱 실행 시 공지데이터를 불러오지 않습니다"/>
+        </LinearLayout>
+
+        <TextView
+            android:layout_marginTop="14dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:text="데이터베이스 초기화"/>
+
+        <LinearLayout
+            android:padding="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_marginLeft="18dp"
+                android:id="@+id/reset_db_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="초기화"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/reset_text"
+                android:layout_marginLeft="4dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:textSize="11dp"
+                android:textStyle="italic"
+                android:singleLine="true"
+                android:hint="저장되어있는 급식데이터를 초기화합니다."/>
         </LinearLayout>
     </LinearLayout>
 
