--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/datasave_switch"
+                android:id="@+id/datasave_switch_meal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
@@ -47,7 +47,7 @@
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/datasave1_switch"
+                android:id="@+id/datasave_switch_notice"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
@@ -78,19 +78,16 @@
             android:orientation="horizontal">
 
             <Button
-                android:layout_marginLeft="18dp"
                 android:id="@+id/reset_db_btn"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="초기화"
-                android:layout_weight="1"/>
+                android:text="초기화" />
 
             <TextView
                 android:id="@+id/reset_text"
                 android:layout_marginLeft="4dp"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
                 android:textSize="11dp"
                 android:textStyle="italic"
                 android:singleLine="true"
