--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -18,7 +18,7 @@
 
             <RelativeLayout
                 android:id="@+id/re_layout"
-                android:background="#E0E0E0"
+                android:background="@color/colorAccent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
