--- a/app/src/main/res/drawable/circle_btn.xml
+++ b/app/src/main/res/drawable/circle_btn.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:width="1dp" android:color="#B0BEC5" />
+            <solid android:width="1dp" android:color="@color/colorPrimary" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:width="1dp" android:color="#CFD8DC" />
+            <solid android:width="1dp" android:color="@color/colorPrimaryDark" />
         </shape>
     </item>
 </selector>
