--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -58,7 +58,8 @@
                 android:id="@+id/main_text"
                 android:padding="16dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:textSize="18dp"/>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
